fix: mobile horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-body {
-    overflow-x: hidden;
-    width: 100%;
-}
-
 #container {
     max-width: 1200px;
     margin: 0 auto;
@@ -13,7 +8,8 @@ body {
 
 .page {
     /* border: 2px solid black; */
-    margin: -20px;
+    margin-bottom: -20px;
+    margin-top: -20px;
 }
 
 #footer {
